
0.9.8b Jan 12, 2004
 * translation updates

0.9.8a Jan 11, 2004
 * translation updates
 * merged --print-uris patch (cynepnynep@chat.ru)
 * initial transfer resume support
 * added md5 sum to pkg_info_t struct
 * added check for conflict string size, preventing overflow
 * updated update_pkg_cache to merge md5sum into package data
   this will speed up md5 lookups since they are now done during --update
 * rewrote get_md5sum()
 * /var/slapt-get/CHECKSUMS.md5 no longer present.
   MD5 sums integrated into /var/slapt-get/package_data
 * update_pkg_cache now queries everything on a server before moving on
   to the next package source.  This helps ensure that duplicate
   packages from multiple sources will be associated with the correct
   md5 checksums, etc.
 * made sure to null terminate strings of package structure elements in
   case assignment isn't made.
 * added check for correct size of package after download, return incomplete
   download instead of continuing and returning a failed md5 checksum
 * added check for empty md5 checksum with notification if so
 * added stat call at appropriate place in download_pkg() so that the file size
   was actually known when needed
 * documentation updates
 * removed redundant gettext msgid's

0.9.8 Dec 18, 2003
 * added slapt-get source to example slapt-getrc
 * updated source creation script, runs PACKAGESTXT and MD5 on all now
 * added --disable-dep-check to skip the dependency checking
 * added support for ROOT enviroment variable for location of packages logs 
   overriding /var/log/packages ("Keary Griffin" <keary@mindless.com>) (FAQ 34)
 * removed check for package existance in the installed pkg list (will now show duplicates)
 * honor --reinstall with upgrades ("Keary Griffin" <keary@mindless.com>)
 * --install now accepts {pkg}-{version} ("Keary Griffin" <keary@mindless.com>) (FAQ 35)
 * initial slack-conflicts support
 * fixed bug with --install {pkg}-{version}, now correctly maps to installed package,